feat(MWSV-87): Add Progress bar component

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,7 @@
 {
-  "home": {
-    "title": "Hello world!"
+  "reservation": {
+    "confirmation": "Confirmation",
+    "extra_service": "Extra Service",
+    "payment": "Payment"
   }
 }
