--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -1,5 +1,7 @@
 {
-  "home": {
-    "title": "merhaba dünya"
+  "reservation": {
+    "confirmation": "Onay",
+    "extra_service": "Ekstra hizmet",
+    "payment": "Ödeme"
   }
 }
