--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -2,6 +2,10 @@
   "reservation": {
     "confirmation": "Onay",
     "extra_service": "Ekstra hizmet",
-    "payment": "Ödeme"
+    "payment": "Ödeme",
+    "review_your_booking_details": "Rezervasyon detaylarınızı gözden geçirin",
+    "key_info": "Anahtar Bilgiler",
+    "house_rules": "Ev Kuralları",
+    "all_details": "Tüm detaylar"
   }
 }
