feat(MWSV-87): Update language files

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,11 +1,35 @@
 {
-  "reservation": {
-    "confirmation": "Confirmation",
-    "extra_service": "Extra Service",
-    "payment": "Payment",
-    "review_your_booking_details": "Review your booking details",
-    "key_info": "Key Info",
-    "house_rules": "House Rules",
-    "all_details": "All details"
-  }
+  "confirmation": "Confirmation",
+  "extra_service": "Extra Service",
+  "payment": "Payment",
+  "review_your_booking_details": "Review your booking details",
+  "key_info": "Key Info",
+  "house_rules": "House Rules",
+  "all_details": "All details",
+  "payment_details": "Payment Details",
+  "you_will_pay": "You'll pay",
+  "apply": "Apply",
+  "apply_coupon_code": "Apply Coupon Code",
+  "reserve": "Reserve",
+  "guest": "Guest",
+  "night_stay": "night stay",
+  "nightly": "Nightly",
+  "total": "Total",
+  "total_nights": "(Total {days} nights)",
+  "coupon_code": "Coupon Code",
+  "nights": "nights",
+  "continue_without_login": "Continue without login",
+  "login_with_email": "Login with e-mail",
+  "become_a_member_and_take_advantage_of_10_percent_discount_on_your_first_reservation": "Become a member and take advantage of 10% discount on your first reservation!",
+  "forgot_password": "Forgot Password?",
+  "write_your_email": "Write your e-mail",
+  "remember_me": "Remember Me",
+  "enter_your_password": "Enter your password",
+  "login": "Log In",
+  "dont_have_account_create_an_account": "Don’t have account? Create an Account",
+  "or_select_method_to_log_in": "or select method to log in",
+  "do_you_have_account_login_now": "Do you have account? Login now",
+  "sign_up_with_email": "Sign Up with e-mail",
+  "phone_number": "Phone Number",
+  "select_our_extra_services_for_you": "Select Our Extra Services For You"
 }
