--- a/src/locales/hr.json
+++ b/src/locales/hr.json
@@ -1,11 +1,35 @@
 {
-  "reservation": {
-    "confirmation": "Potvrda",
-    "extra_service": "Dodatna usluga",
-    "payment": "Plaćanje",
-    "review_your_booking_details": "Pregledajte detalje vaše rezervacije",
-    "key_info": "Ključne informacije",
-    "house_rules": "Pravila kuće",
-    "all_details": "Svi detalji"
-  }
+  "confirmation": "Potvrda",
+  "extra_service": "Dodatna usluga",
+  "payment": "Plaćanje",
+  "review_your_booking_details": "Pregledajte detalje vaše rezervacije",
+  "key_info": "Ključne informacije",
+  "house_rules": "Pravila kuće",
+  "all_details": "Svi detalji",
+  "payment_details": "Detalji o plaćanju",
+  "you_will_pay": "Vi ćete platiti",
+  "apply": "Primijeni",
+  "apply_coupon_code": "Primijeni kôd kupona",
+  "reserve": "Rezerva",
+  "guest": "Gost",
+  "night_stay": "noćenje",
+  "nightly": "Noćni",
+  "total": "Ukupno",
+  "total_nights": "(Ukupno {days} noćima)",
+  "coupon_code": "Kod kupona",
+  "nights": "noćima",
+  "continue_without_login": "Nastavite bez prijave",
+  "login_with_email": "Prijavite se e-mailom",
+  "become_a_member_and_take_advantage_of_10_percent_discount_on_your_first_reservation": "Postanite član i iskoristite 10% popusta na prvu rezervaciju!",
+  "forgot_password": "Zaboravili ste lozinku?",
+  "write_your_email": "Napišite svoju e-poštu",
+  "remember_me": "Zapamti me",
+  "enter_your_password": "Unesite svoju lozinku",
+  "login": "Prijaviti se",
+  "dont_have_account_create_an_account": "Nemate račun? Stvorite račun",
+  "or_select_method_to_log_in": "ili odaberite način za prijavu",
+  "do_you_have_account_login_now": "Imate li račun? Prijavite se sada",
+  "sign_up_with_email": "Prijavite se e-poštom",
+  "phone_number": "Broj telefona",
+  "select_our_extra_services_for_you": "Odaberite naše dodatne usluge za vas"
 }
