--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,7 +21,7 @@
   "discount_coupon_code": "{couponCode} (%10)",
   "percent_discount": "{percent}% Discount",
   "nights": "nights",
-  "payment_nights": "{cost}₺ x {day} nights",
+  "payment_nights": "{cost} x {day} nights",
   "continue_without_login": "Continue without login",
   "login_with_email": "Login with e-mail",
   "become_a_member_and_take_advantage_of_10_percent_discount_on_your_first_reservation": "Become a member and take advantage of 10% discount on your first reservation!",
