--- a/src/locales/hr.json
+++ b/src/locales/hr.json
@@ -21,7 +21,7 @@
   "discount_coupon_code": "{couponCode} (%10)",
   "percent_discount": "{percent}% Popust",
   "nights": "noćima",
-  "payment_nights": "{cost}₺ x {day} noćima",
+  "payment_nights": "{cost} x {day} noćima",
   "continue_without_login": "Nastavite bez prijave",
   "login_with_email": "Prijavite se e-mailom",
   "become_a_member_and_take_advantage_of_10_percent_discount_on_your_first_reservation": "Postanite član i iskoristite 10% popusta na prvu rezervaciju!",
