feat(MVC-11): Update localization for login page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,9 +1,14 @@
 {
+  "sign_up": "Sign up",
+  "dont_you_have_an_account_sign_up": "Dont you have an account?  Sign Up",
+  "forgot_password": "Forgot password?",
+  "remember_me": "Remember me",
   "welcome_to_missafir": "Welcome to Missafir",
   "this_field_is_required": "This field is required.",
   "email": "E-mail",
   "email_is_too_long": "E-mail is too long!",
   "login": "Login",
+  "login_now": "Login now",
   "invalid_or_incomplete_email": "Invalid or incomplete email",
   "send": "Send",
   "message": "Message",
