--- a/src/locales/hr.json
+++ b/src/locales/hr.json
@@ -1,9 +1,14 @@
 {
+  "sign_up": "Prijavite se",
+  "dont_you_have_an_account_sign_up": "Zemlja imate račun? Prijavite se.",
+  "forgot_password": "Zaboravio'la sam šifru?",
+  "remember_me": "Zapamti me",
   "welcome_to_missafir": "Dobrodošli u Missafir",
   "this_field_is_required": "Ovo polje je obavezno.",
   "email": "E-pošta",
   "email_is_too_long": "E-pošta je preduga!",
   "login": "Prijava",
+  "login_now": "Ulogujte se sada",
   "invalid_or_incomplete_email": "Neispravna ili nepotpuna e-pošta",
   "send": "Pošalji",
   "message": "Poruka",
