--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -1,9 +1,14 @@
 {
+  "sign_up": "Kaydol",
+  "dont_you_have_an_account_sign_up": "Hesabınız yok mu? Kaydolun",
+  "forgot_password": "Parolamı unuttum?",
+  "remember_me": "Beni hatırla",
   "welcome_to_missafir": "Missafir'e hoş geldiniz",
   "this_field_is_required": "Bu alan zorunludur.",
   "email": "E-Posta",
   "email_is_too_long": "E-posta çok uzun!",
   "login": "Giriş Yap",
+  "login_now": "Hızlı giriş yap",
   "invalid_or_incomplete_email": "Geçersiz ya da eksik e-posta",
   "send": "Gönder",
   "message": "Mesaj",
