--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -34,6 +34,7 @@
   "do_you_have_account_login_now": "Hesabınız mı var? Şimdi giriş yapın",
   "sign_up_with_email": "E-postayla Kaydolun",
   "phone_number": "Telefon Numarası",
+  "phone_number_is_not_valid": "Telefon numarası geçerli değil.",
   "select_our_extra_services_for_you": "Sizin İçin Ekstra Hizmetlerimizi Seçin",
   "bathroom": "banyo",
   "bedroom": "Yatak odası",
