feat(MVC-21): Integrate listing detail payment data

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -17,9 +17,10 @@
   "total": "Total",
   "total_nights": "(Total {days} nights)",
   "coupon_code": "Coupon Code",
+  "cleaning_fee": "Cleaning fee",
   "coupon_applied": "Coupon applied!",
   "discount_coupon_code": "{couponCode} (%10)",
-  "percent_discount": "{percent}% Discount",
+  "percent_discount": "{percent} Discount",
   "nights": "nights",
   "payment_nights": "{cost} x {day} nights",
   "continue_without_login": "Continue without login",
