--- a/src/locales/hr.json
+++ b/src/locales/hr.json
@@ -17,9 +17,10 @@
   "total": "Ukupno",
   "total_nights": "(Ukupno {days} noćima)",
   "coupon_code": "Kod kupona",
+  "cleaning_fee": "Čištachki taksa",
   "coupon_applied": "Kupon primijenjen!",
   "discount_coupon_code": "{couponCode} (%10)",
-  "percent_discount": "{percent}% Popust",
+  "percent_discount": "{percent} Popust",
   "nights": "noćima",
   "payment_nights": "{cost} x {day} noćima",
   "continue_without_login": "Nastavite bez prijave",
