--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -17,9 +17,10 @@
   "total": "Toplam",
   "total_nights": "(Toplam {days} gece)",
   "coupon_code": "Kupon Kodu",
+  "cleaning_fee": "Temizlik ücreti",
   "coupon_applied": "Kupon uygulandı.",
   "discount_coupon_code": "{couponCode} (%10)",
-  "percent_discount": "{percent}% İndirim",
+  "percent_discount": "{percent} İndirim",
   "nights": "geceler",
   "payment_nights": "{cost} x {day} gece",
   "continue_without_login": "Giriş yapmadan devam et",
